# bluez_peripheral

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  README.rst  notes.txt  pyproject.toml  requirements.txt  requirements_docs.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml  python-test.yml
bluez_images/: test.sh
bluez_peripheral/: __init__.py  adapter.py  advert.py  agent.py  base.py  error.py  flags.py  run.py  types.py  util.py  uuid.py  uuid16.py
bluez_peripheral/gatt/: __init__.py  base.py  characteristic.py  descriptor.py  service.py
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/source/: advert.rst  advertising.rst  agent.rst  bluez_peripheral.rst  characteristics_descriptors.rst  conf.py  dbus_fast.inv  dbus_next.inv  index.rst  pairing.rst  services.rst  spelling_wordlist.txt  util.rst
docs/source/gatt/: descriptor.rst  gatt.rst
docs/source/ref/: bluez_peripheral.adapter.rst  bluez_peripheral.advert.rst  bluez_peripheral.agent.rst  bluez_peripheral.base.rst  bluez_peripheral.error.rst  bluez_peripheral.errors.rst  bluez_peripheral.flags.rst  bluez_peripheral.gatt.base.rst  bluez_peripheral.gatt.characteristic.rst  bluez_peripheral.gatt.descriptor.rst  bluez_peripheral.gatt.rst  bluez_peripheral.gatt.service.rst  bluez_peripheral.rst  bluez_peripheral.types.rst  bluez_peripheral.util.rst  bluez_peripheral.uuid16.rst  uuid.rst
docs/source/ref/gatt/: characteristic.rst  gatt.rst  service.rst
tests/: .pylintrc  README.md  com.spacecheese.test.conf  conftest.py  emulation.py  requirements.txt  test.py  test_advert.py  test_agent.py  test_util.py  test_uuid16.py  util.py
tests/gatt/: test_characteristic.py  test_descriptor.py  test_service.py
tests/loopback/: conftest.py  debug.sh  remote_run.sh  test.py  test.sh  test_advert.py  test_wrapper.sh
tests/unit/: README.md  conftest.py  test_adapter.py  test_advert.py  test_agent.py  test_error.py  test_util.py  test_uuid16.py  util.py
tests/unit/gatt/: test_characteristic.py  test_descriptor.py  test_service.py
