[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.interrogate]
# Documenting these plays badly with sphinx
ignore-init-module = true
ignore-init-method = true

ignore-private = true
ignore-semiprivate = true