[metadata]
name = bluez_peripheral
version = 0.0.2
author = SpaceCheese
description = A library for building BLE peripherals using GATT and bluez
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spacecheese/bluez_peripheral
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Typing :: Typed

[options]
package_dir =
    = bluez_peripheral
packages = find:

[options.packages.find]
where = bluez_peripheral

[pytest]
testpaths = tests