[metadata]
name = bluez_peripheral
version = 0.1.0
author = SpaceCheese
description = A library for building BLE peripherals using GATT and bluez
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spacecheese/bluez_peripheral
license = MIT License
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Typing :: Typed

[options]
install_requires =
    dbus_next
packages = find:

[options.packages.find]
exclude = tests