[metadata]
name = bluez_peripheral
author = SpaceCheese
description = A library for building BLE peripherals using GATT and bluez
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spacecheese/bluez_peripheral
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Typing :: Typed

[options]
install_requires =
    dbus_fast
packages = find:

[options.packages.find]
exclude = tests